--- a/lib/l10n/en.arb
+++ b/lib/l10n/en.arb
@@ -1,14 +1,18 @@
 {
   "@@locale": "en",
   "language": "English",
+
+  "@_GENERAL": {},
   "emptyString": "",
+  "refresh": "Refresh",
+  "userNotFound": "User not found",
+  "userDisabled": "User disabled",
   "genericErrorMessage": "Oops! Something went wrong. Please try again.",
-  "signInWithGoogle": "Sign in with Google",
-  "signInWithApple": "Sign in with Apple",
-  "signInWithPhone": "Sign in with phone",
-  "signInWithEmail": "Sign in with email",
-  "weakPassword": "Weak password",
+  "fetching": "Fetching",
+
+  "@_PASSWORD_RELATED": {},
   "wrongPassword": "Wrong password",
+  "weakPassword": "Weak password",
   "passwordCantBeEmpty": "Password cannot be empty",
   "passwordsDontMatch": "Passwords don't match",
   "mustContain8Chars": "Must contain at least 8 characters",
@@ -16,29 +20,38 @@
   "mustContainLowerCaseLetter": "Must contain at least 1 lowercase letter",
   "mustContainUpperCaseLetter": "Must contain at least 1 uppercase letter",
   "mustContainSpecialChar": "Must contain at least 1 special character",
+  "password": "Password",
+
+  "@_EMAIL_RELATED": {},
   "emailCantBeEmpty": "Email cannot be empty",
   "emailAlreadyInUse": "Email already in use",
   "sentVerificationEmail": "We sent you a verification email",
   "email": "Email",
-  "password": "Password",
+  "resendEmail": "Resend email",
+  "invalidEmail": "Please enter a valid email",
+  "emailNotFound": "Email not found",
+
+  "@_SIGN_IN_OUT_METHODS": {},
   "switchToSignIn": "Switch to Sign In",
   "switchToSignUp": "Switch to Sign Up",
-  "resendEmail": "Resend email",
+  "signInWithGoogle": "Sign in with Google",
+  "signInWithApple": "Sign in with Apple",
+  "signInWithPhone": "Sign in with phone",
+  "signInWithEmail": "Sign in with email",
   "signOut": "Sign out",
   "signUp": "Sign up",
-  "refresh": "Refresh",
-  "userNotFound": "User not found",
-  "invalidEmail": "Please enter a valid email",
-  "userDisabled": "User disabled",
-  "emailNotFound": "Email not found",
   "signingIn": "Signing in",
   "signingUp": "Signing up",
+
+
+  "@_PHONE_VERIFICATION": {},
   "verifyingPhoneNumber": "Verifying phone number",
   "invalidPhoneNumber": "Phone number not valid",
   "invalidCode": "Code was not valid",
   "verifyingCode": "Verifying code",
   "codeTimedOut": "Code timed out",
-  "fetchingUser": "Fetching User",
+
+  "@_SIGN_UP": {},
   "fullName": "Full Name",
   "nameCantBeEmpty": "Name cannot be empty",
   "gender": "Gender",
